[package]
name = "epstain"
version = "0.1.0"
edition = "2024"
description = "A monument to our sins."

[lib]
name = "epstain"
path = "src/lib.rs"

[[bin]]
name = "epstain"
path = "src/main.rs"

[dependencies]
anyhow              = "1.0.100"
clap                = { version = "4.5.53", features = ["derive"] }
indicatif           = { version = "0.18.3" }
tokio               = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
scraper             = { version = "0.25.0", features = ["deterministic"] }
url                 = { version = "2.5.7", features = [] }
rquest              = { version = "5.1.0", features = ["full"] }
rquest-util         = "2.2.1"
html5ever           = { version = "0.36.1", features = [] }
markup5ever_rcdom   = { version = "0.36.0+unofficial", features = [] }
urlparse            = "0.7.3"
